# scienceplots-toolkit

./: .aiignore  .gitignore  .markdownlint.jsonc  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  GIT_WORKFLOW.md  LICENSE  MatplotlibStyle.py  PUBLICATION_PLAN.md  PYPI_SETUP_WITH_AGENIX.md  QUICK_START.md  README.md  RELEASE.md  devenv.nix  devenv.yaml  entrypoint.sh  example.py  example_energy.py  fish_settings.fish  llms.txt  mdlint.toml  plotting_utils.py  profile_analysis.py  pyproject.toml  requirements.txt
.agents/instructions/: coding-standards.instructions.md  data-handling.instructions.md  documentation.instructions.md  plotting.instructions.md  workflow.instructions.md
.agents/skills/: scienceplots-viz.md
.agents/skills/scienceplots-viz/: SKILL.md
docs/: AGENTS.md  ARCHITECTURE.md  PAV_CYCLE.md  PYTHON_STANDARDS.md
docs/coordination/: ARTIFACTS.md  QUICKSTART.md
docs/templates/: PLAN.md  SKILL.md  SPEC.md
examples/: example_analysis.py  example_basic.py  example_energy.py  example_orchestrator.py  example_readme.py
scripts/: load-pypi-tokens.sh  mirror-to-github.sh  release.sh  test-testpypi-install.sh
src/scienceplots_toolkit/: AGENTS.md  __init__.py  __main__.py  analysis.py  cli.py  latex.py  style.py  utils.py
tests/: AGENTS.md  __init__.py  conftest.py  test_analysis.py  test_style.py  test_utils.py  test_visual_baselines.py
tools/agent/: README.md  eval_skill.py  validate_skill.py  validate_standards.py
wiki/: README.md
